Fix windows build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS})
 set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS})
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
+SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
 
 include(cotire)
 
@@ -24,14 +24,10 @@ if(PKG_CONFIG_FOUND)
   endif()
 endif()
 
-find_package(GLEW)
-if(GLEW_FOUND)
-  MESSAGE("System GLEW found")
-endif()
-
-find_package(GLM)
-if(GLM_FOUND)
-  MESSAGE("System GLM found")
+if(NOT GLFW_FOUND)
+  add_subdirectory(dep/glfw)
+  set(GLFW_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dep/glfw/include CACHE STRING "glfw_include_dirs" FORCE)
+  set(GLFW_STATIC_LIBRARIES glfw ${GLFW_STATIC_LIBRARIES} CACHE STRING "glfw_static_libraries" FORCE)
 endif()
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/dep)
